Fri Dec 07 00:27:33 2012  Jiri (George) Lebl <jirka@5z.com>

	* help/C/genius.xml, help/C/gel-function-list.xml: add
	  doc for new functions.  Also add details in bits of the docs,
	  they really still need lots of love.

Thu Dec 06 12:03:12 2012  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c: Add SurfacePlotDrawGrid to draw data directly from
	  grid to avoid having to make up a data matrix

	* src/graphing.c, gtkextra/gtkplotcanvas.c: Fix flicker during
	  surface animations by properly freezing the display and also
	  letting the painting happen at the right time.

Tue Dec 04 23:31:30 2012  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c: some cleanup with respect to fitting dependent
	  axis on surfaces.  Also fix fitting dependent axis for surfaces
	  plotted with SurfacePlotData

Tue Dec 04 19:50:40 2012  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c, gtkextra/gtkplotdt.c:  Add SurfacePlotData which
	  plots 3d graphs from data, so that we can plot all sorts of
	  surfaces.  Also LinePlotDrawAxisLabels was not added as parameter
	  by mistake, so add it

Thu Nov 29 23:02:13 2012  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c: Add SurfacePlotDrawLegends parameter, also
	  add it to the UI.  Fix LinePlotDrawLabels, and also make sure
	  LinePlotDrawLegends redraws the plot canvas if changed and
	  plot canvas is active.

Tue Nov 27 12:59:21 2012  Jiri (George) Lebl <jirka@5z.com>

	* configure.in: Require MPFR 2.3.0

	* src/funclib.c: add Bessel functions
	  (BesselJ0, BesselJ1, BesselJn, BesselY0, BesselY1, BesselYn)

Tue Nov 27 10:05:50 2012  Jiri (George) Lebl <jirka@5z.com>

	* atlapack/ atblas/: remove, this was just a pain and I don't have
	  time to make it work as is.  We'll try to link to lapack if
	  available or maybe even make it a requirement.  The fortran version
	  seems available on most distros so it should not be a problem.

Fri Jul 13 07:15:05 2012  Jiri (George) Lebl <jirka@5z.com>
