@@ -4,6 +4,8 @@ Changes to 1.0.16
   surface data, to allow more complicated 3d plots and 3d plots from data.
 * Add LinePlotDrawAxisLabels and SurfacePlotDrawLegends parameters and
   add corresponding UI checkboxes 
+* Add ExportPlot function to export the current contents of the plot window
+  to a file from GEL
 * Add sinc, BesselJ0, BesselJ1, BesselJn, BesselY0, BesselY1, BesselYn functions
 * Simpler output when typing "help foo" when foo is neither defined nor
   documented.
