@@ -1,3 +1,8 @@
+Fri Dec 07 17:21:26 2012  Jiri (George) Lebl <jirka@5z.com>
+
+	* src/graphing.c, help/C/gel-function-list.xml: add ExportPlot
+	  function
+
 Fri Dec 07 00:27:33 2012  Jiri (George) Lebl <jirka@5z.com>
 
 	* help/C/genius.xml, help/C/gel-function-list.xml: add
